--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "brain-games",
   "version": "1.0.0",
   "description": "frontend project lvl1",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -15,5 +15,9 @@
   "bugs": {
     "url": "https://github.com/OlegGuskov/frontend-project-lvl1/issues"
   },
-  "homepage": "https://github.com/OlegGuskov/frontend-project-lvl1#readme"
+  "homepage": "https://github.com/OlegGuskov/frontend-project-lvl1#readme",
+  "type": "module",
+  "bin": {
+    "brain-games": "bin/brain-games.js"
+  }
 }
