--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -2,16 +2,15 @@ env:
   es6: true
   node: true
 
-plugins: 
-  - babel
-
 extends: 'airbnb-base'
 
 globals:
   Atomics: readonly
   SharedArrayBuffer: readonly
 
-parser: babel-eslint
+parserOptions:
+  ecmaVersion: 2018
+  sourceType: module
 
 rules:
   no-console: 0
