--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -17,8 +17,8 @@ jobs:
 
       - name: Install dependencies
         run: |
-          npm install --save-dev eslint-config-airbnb-base eslint-plugin-import
-          
+          make install
+
       - name: Run linter
         run: |
           make lint
